kubernetes/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: api
          image: <ECR_IMAGE>
          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: fastapi
#spec:
#  replicas: 3
#  selector:
#    matchLabels:
#      server: fastapi
#  template:
#    metadata:
#      labels:
#        server: fastapi
#    spec:
#      containers:
#        - name: api
#          image: <ECR_IMAGE>
#          ports:
#            - containerPort: 8000
#          resources:
#            requests:
#              cpu: "250m"
#              memory: "256Mi"
#            limits:
#              cpu: "500m"
#              memory: "512Mi"
#          readinessProbe:
#            httpGet:
#              path: /health
#              port: 8000
#            initialDelaySeconds: 5
#          livenessProbe:
#            httpGet:
#              path: /health
#              port: 8000
#            initialDelaySeconds: 10
